# qap-selenium

./: .gitignore  README.md  conftest.py  pyproject.toml
pages/: auth_page.py  base.py  elements.py
tests/: test_auth_page.py
